feat : repository names listed

--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -6,7 +6,7 @@
       "Github GraphQL Endpoint": {
         "url": "https://api.github.com/graphql",
         "headers": {
-          "Authorization": "bearer YOUR TOKEN HERE"
+          "Authorization": "bearer {process.env.REACT_APP_GITHUB_KEY}"
         },
         "introspect": true
       }
